Enhance footer layout and navigation styles; add language selection text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>Store</p>
         </a>
       </div>
-      <nav class="nav-container">
+      <nav class="nav-container nav-container-second">
         <a class="text-link" target="_blank" href="https://about.google/">
           <p>Gmail</p>
         </a>
@@ -55,11 +55,11 @@
         <input title="search" />
         <div>
           <button class="input-icons">
-          <i class="fa-solid fa-microphone"></i>
-        </button>
-        <button class="input-icons">
-          <i class="fa-solid fa-camera"></i>
-        </button>
+            <i class="fa-solid fa-microphone"></i>
+          </button>
+          <button class="input-icons">
+            <i class="fa-solid fa-camera"></i>
+          </button>
         </div>
       </div>
       <div class="button-grid">
@@ -70,9 +70,37 @@
           <p>I'm Feeling Lucky</p>
         </button>
       </div>
+      <p class="language-text">Google offered in: <a href="" class="language-link">Español</a></p>
     </main>
     <footer>
-      asdasd
+      <div>
+        <p>Honduras</p>
+      </div>
+      <hr />
+      <div class="footer-grid">
+        <div class="footer-links">
+          <a href="/">
+            <p>Advertising</p>
+          </a>
+          <a href="/">
+            <p>Business</p>
+          </a>
+          <a href="/">
+            <p>How Search Works</p>
+          </a>
+        </div>
+        <div class="footer-links">
+          <a href="/">
+            <p>Privacy</p>
+          </a>
+          <a href="/">
+            <p>Terms</p>
+          </a>
+          <a href="/">
+            <p>Settings</p>
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
